# pay-street

./: .env.example  .gitignore  AGENTS.md  API_SPEC.md  ARCH.md  ASSET_GUIDE.md  CONTENT_ENGINE.md  CONTENT_POLICY.md  DATA.md  DOC_INDEX.md  IMPLEMENTATION_PLAN.md  LOCAL_SETUP.md  METRICS.md  MVP_TASKS.md  OPERATIONS.md  PRD.md  PROMPT_DESIGN.md  RENDER_PIPELINE.md  SCHEMA.md  VIDEO_TEMPLATE_SYSTEM.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_api_keys.py
docs/: agent-playbook.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
frontend/src/pages/: ApiKeys.tsx  Dashboard.tsx  Pipeline.tsx  SalaryData.tsx  Topics.tsx
paystreet/ai/: llm.py  prompts.py  script_validator.py  tts.py
paystreet/ai/providers/: elevenlabs_tts.py  mock_llm.py  mock_tts.py  openai_llm.py  openai_tts.py
paystreet/app/: config.py  database.py  logging_config.py  main.py
paystreet/app/api/: __init__.py  admin.py  api_keys.py  pipeline.py  salary.py  scripts.py  (+1 more)
paystreet/data/: normalizers.py  salary_calculator.py  salary_repository.py
paystreet/scripts/: seed_data.py
paystreet/templates/: street_interview_v1.yaml
paystreet/workers/: celery_app.py  video_worker.py
tests/: test_api_routers.py  test_data_layer.py  test_e2e_pipeline.py  test_infrastructure.py  test_providers.py  test_render_smoke.py  test_salary_range.py  test_script_format.py  test_services_engine.py  test_topic_generation.py  test_workers.py
(+29 files in other folders)
